<resources>
    <string name="app_name">Cinema</string>

    //hw2
    <string name="movie_details_activity">Переход на Movie Details Activity</string>
    <string name="movie_name">Avengers: <br> </br>End Game</string>
    <string name="movie_name_for_list">Avengers: End Game</string>
    <string name="movie_pg">13+</string>
    <string name="movie_storyline">Storyline</string>
    <string name="movie_brief_description">After the devastating events of Avengers: Infinity War,
                                            the universe is in ruins. With the help of remaining allies,
                                            the Avengers assemble once more in order to reverse Thanos
                                            actions and restore balance to the universe.</string>
    <string name="movie_tag">Action, Adventure, Fantasy</string>
    <string name="movie_cast">Cast</string>
    <string name="movie_actor1">Robert <br> </br> Downey Jr.</string>
    <string name="movie_actor2">Chris  <br> </br> Evans</string>
    <string name="movie_actor3">Mark <br> </br>  Ruffalo</string>
    <string name="movie_actor4">Chris <br> </br> Hemsworth</string>
    <string name="movie_reviews">125 REVIEWS</string>
    <string name="movie_back">Back</string>
    <string name="movies_list">Movies list</string>
    <string name="movie_running_time">137 min</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>