<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layout_background_color">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/layout_background_color">

        <ImageView
            android:id="@+id/iv_name_movie0"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:foreground="@drawable/gradient_img"
            android:scaleType="centerCrop"
            android:src="@drawable/orig"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@id/iv_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:drawableLeft="@drawable/ic_baseline_arrow_back_ios_24"
            android:text="@string/movie_back"
            android:textColor="@color/back_button_color"
            android:textSize="@dimen/space_4x"
            app:layout_constraintEnd_toEndOf="@+id/iv_name_movie0"
            app:layout_constraintHorizontal_bias="0.045"
            app:layout_constraintStart_toStartOf="@+id/iv_name_movie0"
            app:layout_constraintTop_toTopOf="@+id/iv_name_movie0" />

        <TextView
            android:id="@+id/tv_pg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="196dp"
            android:text="@string/movie_pg"
            android:textColor="@color/white"
            android:textSize="@dimen/space_3x"
            app:layout_constraintEnd_toEndOf="@+id/iv_name_movie0"
            app:layout_constraintHorizontal_bias="0.041"
            app:layout_constraintStart_toStartOf="@+id/iv_name_movie0"
            app:layout_constraintTop_toBottomOf="@+id/iv_back_button" />

        <TextView
            android:id="@+id/tv_movie_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movie_name"
            android:textColor="@color/white"
            android:textSize="@dimen/space_10x"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/tv_pg"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tv_pg"
            app:layout_constraintTop_toBottomOf="@+id/tv_pg" />

        <TextView
            android:id="@+id/tv_movie_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movie_tag"
            android:textColor="@color/tag_and_star_color"
            android:textSize="@dimen/space_3.5x"
            app:layout_constraintEnd_toEndOf="@+id/tv_movie_name"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tv_movie_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_movie_name" />

        <RatingBar
            android:id="@+id/rb_of_movie"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="87dp"
            android:layout_height="24dp"
            android:numStars="5"
            android:progressBackgroundTint="@color/white"
            android:progressTint="@color/tag_and_star_color"
            android:rating="4"
            app:layout_constraintStart_toStartOf="@+id/tv_movie_tag"
            app:layout_constraintTop_toBottomOf="@+id/tv_movie_tag" />

        <TextView
            android:id="@+id/tv_review"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movie_reviews"
            android:textColor="@color/reviews_and_storyline_color"
            android:textSize="@dimen/space_3.5x"
            app:layout_constraintEnd_toEndOf="@+id/tv_movie_tag"
            app:layout_constraintStart_toEndOf="@+id/rb_of_movie"
            app:layout_constraintTop_toBottomOf="@+id/tv_movie_tag" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/movie_storyline"
            android:textColor="@color/white"
            android:textSize="@dimen/space_3.5x"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/tv_review"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/rb_of_movie"
            app:layout_constraintTop_toBottomOf="@+id/rb_of_movie" />

        <TextView
            android:id="@+id/tv_movie_description"
            android:layout_width="376dp"
            android:layout_height="69dp"
            android:layout_marginTop="4dp"
            android:text="@string/movie_brief_description"
            android:textColor="@color/reviews_and_storyline_color"
            android:textSize="@dimen/space_3.5x"
            app:layout_constraintEnd_toEndOf="@+id/textView7"
            app:layout_constraintHorizontal_bias="0.006"
            app:layout_constraintStart_toStartOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/movie_cast"
            android:textColor="@color/white"
            android:textSize="@dimen/space_3.5x"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/tv_movie_description"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tv_movie_description"
            app:layout_constraintTop_toBottomOf="@+id/tv_movie_description" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/id_rv_actors"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8"
            tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/view_holder_actor" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>